Fixing JS performance (adding debounced resize event, unbinding events when too narrow so no duplication), new logo and Scroll for More arrow

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -34,6 +34,19 @@ h1 {
 	padding: 1.5em 0 1.3em;
 	width: 18.5em;
 }
+.logo {
+	padding-top:33px;
+}
+.scrolldown {
+	position:absolute;
+	width:80px;
+	height:0;
+	padding-top:91px;
+	overflow:hidden;
+	background:url("../images/scroll-to-learn-more.png") no-repeat 0 0;
+	top:423px;
+	right:10px;
+}
 
 .section {
 	/*min-height: 780px;*/
@@ -468,6 +481,9 @@ a.reveal {
 		}
 
 @media only screen and (max-width: 1024px) {
+	.scrolldown {
+		display:none;
+	}
 	.row {
 
 	}
